# mean-FLAME

./: CITATION.cff  LICENSE  README.md  mean_FLAME_examples.ipynb
LV/: dyn_diff.hpp  tevol_source_diff.cpp
Lokta-Volterra/: CMakeLists.txt  dyn_diff.hpp  run_lokta_voltera.cpp  tevol_source_diff.cpp
Lotka-Volterra/: CMakeLists.txt  dyn_diff.hpp
SIRS/: CMakeLists.txt  dyn_diff.hpp  run_SIRS.cpp  tevol_source_diff.cpp
life-cycle/: CMakeLists.txt  dyn_diff.hpp  run_life_cycle.cpp  tevol_source_diff.cpp
tutorials/: mean_FLAME_examples.ipynb
