cmake_minimum_required(VERSION 3.30)
project(mean-FLAME)
add_executable(mean-FLAME tevol_source_diff.cpp)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
find_package(Boost REQUIRED COMPONENTS multi_array)
SET(EXTERNAL_INCLUDES ${Boost_INCLUDE_DIRS})
SET(EXTERNAL_LIBRARIES ${Boost_LIBRARY_DIRS})
find_package(GSL)